src/lib/codegen/canisters/utils/snapshots/csx__lib__codegen__canisters__utils__candid__tests__compile__normal.snap
---
source: src/lib/codegen/canisters/utils/candid.rs
expression: compiled
---
#![allow(dead_code, unused_imports)]
use candid::{self, CandidType, Deserialize, Principal, Encode, Decode};
pub type RequestArgsType = u64;
pub type ResponseType = String;
